* Tue Oct 02 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 3.3.0-0
- Added Redhat 7.5 services to default service ignore list.
- Updated ruby version to 2.4.4
- Updated Gemfile to ask for puppet 5
- Update badges and contribution guide URL in README.md

* Mon Sep 10 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 3.3.0-0
- Update Hiera 4 to Hiera 5

* Fri Aug 24 2018 Nick Miller <nick.miller@onypoint.com> - 3.3.0-0
- Add support for Puppet 5 and OEL

* Fri Jul 27 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 3.2.6-0
- Add simp_client_bootstrap service to the ignore list.  If this
  is omitted from the ignore list, svckill will kill the bootstrap
  process of SIMP clients, while they are boostrapping the system.

* Fri Jun 22 2018 Nick Miller <nick.miller@onypoint.com> - 3.2.6-0
- Update CI assets

* Fri Feb 09 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 3.2.5-0
- Update upperbound on puppetlabs/concat version to < 5.0.0

* Mon Oct 02 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 3.2.4-0
- Fix bug in which svckill provider can fail on a server for which
  there are are no aliased, SystemD services.

* Fri Aug 18 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 3.2.3-0
- Update concat version in metadata.json & build/rpm_metadata/requires

* Tue Aug 01 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 3.2.2-0
- Tweak spec tests so will run in docker containers

* Fri Jun 23 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 3.2.1-0
- Fix bug whereby svckill provider's insync_values? emits
  'Unknown failure' message during normal operation.

* Fri Jun 09 2017 Nick Markowski <nmarkowski@keywcorp.com> - 3.2.1-0
- Implemented simplib::knockout on the ignore list so users can
  remove items in the default list via hiera.

* Wed Apr 19 2017 Nick Markowski <nmarkowski@keywcorp.com> - 3.2.1-0
- In the service kill provider, not all services queried by 'Name'
  with systemctl would return a name.  That caused a break in symlink